@@ -1,3 +1,6 @@
+7 March 2008
++ Added getForm function to Categories.
+
 7 February 2008
 + Rewrote portions to work with File Cabinet.
 
